fix overflow

--- a/src/Components/ShoppingList/ShoppingItem.css
+++ b/src/Components/ShoppingList/ShoppingItem.css
@@ -25,7 +25,8 @@
 }
 
 .item-name  {
-  overflow: auto;
+  word-break: break-word;
+  white-space: normal;
   font-size: 1.5rem;
 }
 
